add StringTemplateTest